# TRVL

./: .gitignore  README.md  docker-compose.yml
app/: package-lock.json
app/src/: App.tsx
app/src/pages/backlog/: BacklogBoard.tsx  index.tsx
app/src/pages/backlog/components/: BacklogBoard.tsx
app/src/pages/schedule/: index.tsx
apps/api/: README.md  pyproject.toml  requirements.txt
apps/api/app/: db.py  main.py  models.py  schemas.py
apps/api/app/routers/: auth.py  backlog.py  trips.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 249abd0610eb_add_category_to_backlog_cards.py  5f2cd47a591b_add_creator_to_backlog_cards.py  627f9b007ff0_add_trip_legs_table.py  70385495e590_merge_multiple_heads.py  8a1f3b2b7c1a_add_scheduled_events_table.py  9b1c2d3e4f5a_add_travel_segments_table.py  a1b2c3d4e5f6_extend_travel_segments_fields.py  b7e6c5d4a321_add_created_by_to_trips.py  cce4df14a696_merge_multiple_heads.py  dd037141663b_merge_multiple_heads.py  e3c452322cbc_init_tables.py  f1e2d3c4b5a6_add_trip_users_and_invite_code.py
apps/api/trvl_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: App.css  App.tsx  index.css  main.tsx
apps/web/src/api/: client.ts
apps/web/src/components/: Navigation.tsx  TripLegsManager.tsx
apps/web/src/pages/backlog/: index.tsx
apps/web/src/pages/budget/: index.tsx
apps/web/src/pages/invite/: index.tsx
apps/web/src/pages/itinerary/: index.tsx
apps/web/src/pages/login/: index.tsx
apps/web/src/utils/: tripUtils.ts
(+17 files in other folders)
