
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trvl-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.9",
  "python-dotenv>=1.0",
  "psycopg[binary]>=3.2",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
]
